<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView_title_dialogRating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingEnd="55dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:padding="12dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/rating"
            android:textColor="@color/white"
            android:background="@color/textView_app_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView_close_dialogRating"
            android:layout_width="40dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_close"
            app:layout_constraintBottom_toBottomOf="@+id/textView_title_dialogRating"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView_title_dialogRating" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView_des_dialogRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/rating_des"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_title_dialogRating" />

        <RatingBar
            android:id="@+id/ratingBar_dialogRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:isIndicator="false"
            android:numStars="5"
            android:stepSize="1"
            android:theme="@style/RatingBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_des_dialogRating" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_dialogRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            app:backgroundTint="@color/button_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar_dialogRating" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>